[GStreamer] REGRESSION(r285586): we never end the playback of some videos https://bugs.webkit.org/show_bug.cgi?id=239387

Patch by Yacine Bandou <yacine.bandou@softathome.com> on 2022-04-20
Reviewed by Philippe Normand.

Source/WebCore:

If the sinks have the EOS flag, we shouldn't ignore the EOS message.
Without this commit we never end the playback of some videos,
because we ignore the EOS message, like this one:
https://www.tv5mondeplus.com/bumpers/tv5_bumper.mp4

Test: media/video-inaccurate-duration-ended.html

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):

LayoutTests:

* media/content/test-inaccurate-duration.mp4: Added.
* media/video-inaccurate-duration-ended-expected.txt: Added.
* media/video-inaccurate-duration-ended.html: Added.

Canonical link: https://commits.webkit.org/249802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293091 268f45cc-cd09-0410-ab3c-d52691b4dbfc